fix overflow in firefox

--- a/src/styles/product/article-heading.scss
+++ b/src/styles/product/article-heading.scss
@@ -7,7 +7,8 @@
   }
 
   .grid-container {
-    max-width: 750px;
+    max-width: 100%;
+    width: 750px;
   }
 
   .quote-wrapper {
